# rag-fintech

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  init.sql  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
dashboard/: app.py
docs/: TECHNICAL.md
migrations/: env.py
migrations/versions/: afcc172a6e71_baseline_schema.py
rag/: engine.py  logging_config.py
rag/adapters/: openrouter_llm_adapter.py  postgres_sql_executor_adapter.py
rag/application/: ports.py  rag_service.py
rag/domain/: exceptions.py  schema.py  validation.py
scripts/: init_db.py
tests/: test_engine.py  test_integration.py  test_logging_config.py
tests/adapters/: test_openrouter_llm_adapter.py  test_postgres_sql_executor_adapter.py
tests/application/: test_rag_service.py
tests/domain/: test_validation.py
