[project]
name = "projet-rag-fintech"
version = "0.1.0"
description = "Assistant IA RAG Text-to-SQL pour l'analyse de fraude fintech en Afrique de l'Ouest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

